# Visual-Radar

./: README.md  intrinsics.npz  pyproject.toml  requirements.txt  stereo_landscape_calibrate.py  stereo_rtsp_runtime.py  stereo_rtsp_runtime_small_targets.py  test.py
calib/: rotation_only.npz
configs/: day.yaml  night.yaml  rtsp_5mp.yaml  rtsp_soft.yaml
cpp/: _ncc.cpp  setup.py
docs/: DESIGN.md
stereo_rtsp_out/: F_avg.npy  P1.npy  P2.npy  Q.npy  R1.npy  R2.npy  R_avg.npy  intrinsics.npz  t_dir_avg.npy
tests/: test_smoke.py
tools/: far_extrinsics.py  far_rotate_only.py  mono_calibrate_adv.py  roi_clicker.py
visual_radar/: __init__.py  __main__.py  calibration.py  cli.py  config.py  detector.py  io.py  motion.py  pipeline.py  snapshots.py  stereo.py  sync.py  tracks.py  utils.py  visualize.py
